--- a/First_application/First_application.csproj
+++ b/First_application/First_application.csproj
@@ -228,6 +228,7 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Base\Change.cshtml" />
+    <Content Include="Views\Base\RahulBranch.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
